[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qaoa-maxcut"
version = "0.2.0"
description = "QAOA for Max-Cut with INTERP warm-start, classical baselines, and noise sweeps."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "numpy",
    "scipy",
    "networkx",
    "matplotlib",
]

[project.optional-dependencies]
gw = ["cvxpy"]
test = ["pytest"]

[project.scripts]
qaoa-run = "examples.run_qaoa:main"
qaoa-noise = "examples.noise_sweep:main"

[tool.setuptools.packages.find]
include = ["qaoa_maxcut*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
